Bug 49582 - FILESAVE: Long delays saving in XP .XLS format
Summary: FILESAVE: Long delays saving in XP .XLS format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: x86 (IA32) All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:3.7.0 target:3.6.0.0.beta3...
Keywords:
: 50168 50170 50811 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-05-07 06:25 UTC by Jeff Evans
Modified: 2013-12-05 15:31 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet with which problem is being experienced. Not tried with any other ... (54.00 KB, application/vnd.ms-excel)
2012-05-07 06:25 UTC, Jeff Evans
Details
xls file (402.50 KB, application/vnd.ms-excel)
2012-05-08 14:10 UTC, eric
Details
sample file (1.13 MB, application/x-gzip)
2012-07-02 18:44 UTC, Faris Aljuhdi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff Evans 2012-05-07 06:25:41 UTC
Created attachment 61138 [details]
Spreadsheet with which problem is being experienced. Not tried with any other ...

Problem description: 

Steps to reproduce:
1. Load attached Spreadsheet
2. Save in .XLS format
3. Wait at least 8 Minutes....

Current behavior: 19 sheets, all 20 rows * 8 columns, simple formatting & formulae. Heavy CPU usage for a long time; sometimes completes, sometimes just gets stuck and I cancel through task manager.

Expected behavior: Save in less than half a minute

Platform (if different from the browser): 
              
Windows XP fully updated, Atom N270 processor.
Comment 1 eric 2012-05-08 14:10:46 UTC
Created attachment 61253 [details]
xls file
Comment 2 eric 2012-05-08 14:15:17 UTC
I have the save behavior with the "xls file" attached since I upgraded from 3.5.2 to 3.5.3.
I'm using win7 x32 (Atom cpu) and x64.
The file is saved in more than 1mn instead of a few seconds.
Heavy CPU usage, the process is "not responding" according to win7
Comment 3 DB 2012-05-10 09:59:11 UTC
I have the same issue, but with Mac OS X. I switch back to 3.5.2, which saves (at least XLS files) much faster. Also, 3.5.3 crashed during one of the prolonged save operations.
Comment 4 Klaus 2012-05-21 04:02:53 UTC
Remove the lines and it's fast.
Insert one vertical line along a whole column and it's slow again.
Same file in version 3.5.2 saves fast with and without lines.
Comment 5 Klaus 2012-05-21 04:04:17 UTC
*** Bug 50168 has been marked as a duplicate of this bug. ***
Comment 6 madmuffin 2012-06-01 14:50:37 UTC
i can confirm this lag on linux, so it is probably not platform specific.
it took the computer more than 30 seconds to save the file Jeff provided. during the time i had a very high load.

running ubuntu 11.04 with libreoffice 3.5.3 on a Intel Centrino Core 2 Duo T7300 @2.00 GHz
Comment 7 eric 2012-06-04 12:27:18 UTC
The behaviour is still the same with libreoffice 3.5.4
Comment 8 Pependos 2012-06-04 22:04:55 UTC
*** Bug 50170 has been marked as a duplicate of this bug. ***
Comment 9 umi 2012-06-07 02:15:01 UTC
I can confirm it on XP and W7. The same behavior is when saving as xlsx.
Because of the heavy memory consumption the system will crash on files with many tables.
There is no problem saving the file in ods format.
Comment 10 umi 2012-06-07 02:30:32 UTC
*** Bug 50811 has been marked as a duplicate of this bug. ***
Comment 11 Not Assigned 2012-06-25 03:35:57 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66ea6d9801ea8e214f39a70251e5ccc5f47c315a

only export the supported number of rows/columns, fdo#49582
Comment 12 Not Assigned 2012-06-25 03:42:10 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=462f94c2b93a65e5388e2935baaeeac165679a14&g=libreoffice-3-6

only export the supported number of rows/columns, fdo#49582


It will be available in LibreOffice 3.6.
Comment 13 Jeff Evans 2012-06-25 05:28:42 UTC
Many thanks. Look forward to 3.6.
Comment 14 Markus Mohrhard 2012-06-26 04:04:18 UTC
Fixed in 3.5.5 with http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5-5&id=6a6cee1af26e68c7a5479f2eff5a33d483ff54ed

The problem is that this patch was correct but our cell export code is horrible and will create million of temporary cells if we have formatting in a whole column. Excel exports cells differently and we may need to switch to their way to export to xls.
Comment 15 Faris Aljuhdi 2012-07-02 18:44:47 UTC
Created attachment 63745 [details]
sample file
Comment 16 Faris Aljuhdi 2012-07-02 18:47:32 UTC
I have same issue with saving file and it takes more than 20 minutes.
I tried with libreoffice 3.5.5 rc2 and still same as before.