only export the supported number of rows/columns, fdo#49582

Change-Id: I51fc4d0a6d9cc09c82268351ad069467bf8acc31